--- a/source/stylesheets/refills/_tables.scss
+++ b/source/stylesheets/refills/_tables.scss
@@ -2,7 +2,6 @@
   // if you are using bitters.io you can remove everything down to the commented line
   $base-border-color: gainsboro !default;
   $base-border-radius: 3px !default;
-  $base-background-color: white !default;
   $base-line-height: 1.5em !default;
   $base-spacing: 1.5em !default;
   $base-accent-color: #477DCA !default;
@@ -20,15 +19,11 @@
     text-align: left;
   }
 
-  td {
-    line-height: $base-line-height;
-  }
-
   button {
     -webkit-font-smoothing: antialiased;
   }
 
-  //////////////////////////////////////////////
+  ///////////////////////////////////////////////////////////////////////////////////
 
   $table-border-color: $base-border-color;
   $table-border: 1px solid $table-border-color;
@@ -109,19 +104,16 @@
         @include button(flat, $base-accent-color);
         display: inline-block;
         font-size: .7em;
+        line-height: $base-line-height;
         margin-bottom: .3em;
         margin-right: 0.5em;
         outline: none;
-        padding: 0 1em;
+        padding: .3em 1em;
         width: 100%;
 
         @include media($medium-screen) {
           margin-bottom: 0;
           width: auto;
-        }
-
-        @include media($large-screen) {
-          font-size: .8em;
         }
       }
     }
