--- a/source/stylesheets/refills/_breadcrumbs.scss
+++ b/source/stylesheets/refills/_breadcrumbs.scss
@@ -2,6 +2,7 @@
   // if you are using bitters.io you can remove everything down to the commented line
   $base-border-color: gainsboro !default;
   $base-border-radius: 3px !default;
+  $base-background-color: white !default;
   $base-spacing: 1.5em !default;
   $base-accent-color: #477DCA !default;
   $base-link-color: $base-accent-color !default;
@@ -9,8 +10,7 @@
   $light-gray: #DDD !default;
   $medium-screen: em(640) !default;
   -webkit-font-smoothing: antialiased;
-
-  //////////////////////////////////////////////
+  ///////////////////////////////////////////////////////////////////////////////////
 
   $breadcrumb-border-color: $base-border-color;
   $breadcrumb-border: 1px solid $breadcrumb-border-color;
