--- a/source/stylesheets/refills/_dropdown.scss
+++ b/source/stylesheets/refills/_dropdown.scss
@@ -3,6 +3,7 @@
   $base-border-color: gainsboro !default;
   $base-border-radius: 3px !default;
   $base-line-height: 1.5em !default;
+  $base-background-color: white !default;
   $dark-gray: #333 !default;
   $large-screen: em(860) !default;
   $base-font-color: $dark-gray !default;
@@ -19,7 +20,7 @@
     list-style: none;
   }
 
-  //////////////////////////////////////////////
+  ///////////////////////////////////////////////////////////////////////////////////
 
   $dropdown-color: $base-font-color;
   $dropdown-description-color: lighten($dropdown-color, 40);
